be/src/runtime/decimal-value.h
@@ -196,11 +196,10 @@ class DecimalValue {
   T value_;
 
   /// Returns in *x_val and *y_val, the adjusted values so that both are at
-  /// max(x_scale, y_scale) scale. The scale is the number of digits after the decimal.
-  /// Returns true if the adjustment causes overflow in which case the values in
-  /// x_scaled and y_scaled are unmodified.
+  /// max(x_scale, y_scale) scale. It is the job of the caller to make sure
+  /// that both numbers can fit into RESULT_T after being scaled up.
   template <typename RESULT_T>
-  static inline bool AdjustToSameScale(const DecimalValue& x, int x_scale,
+  static inline void AdjustToSameScale(const DecimalValue& x, int x_scale,
       const DecimalValue& y, int y_scale, int result_precision, RESULT_T* x_scaled,
       RESULT_T* y_scaled);
 };
